<resources>
    <string name="app_name">My Bills</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="items">Items</string>
    <string name="customers">Customers</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="alert">Caution</string>
    <string name="item_code">Item Code</string>
    <string name="item_name">Item Name</string>
    <string name="cost">Cost</string>
    <string name="price">Price</string>
    <string name="ad_date">Add Date</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="yes">yes</string>
    <string name="no">No</string>
    <string name="add_Items">Add Items</string>
    <string name="Edit_Items">Edit Items</string>
    <string name="New_item_code">New Item Code</string>
    <string name="New_item_name">New Item Name</string>
    <string name="New_item_cost">New Cost</string>
    <string name="New_item_price">New Price</string>
    <string name="AlertDialog_Title_delete">Are you sure to delete</string>
    <string name="Please_fill">Required Field</string>
    <string name="Done_Edit">Edit done</string>
    <string name="Done_Adding">Adding done</string>
    <string name="The_number_already_exists">The number is already exists</string>
    <string name="customer_code">Customer Code</string>
    <string name="customer_name">Customer Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="add_Customer">Add Customer</string>
    <string name="edit_Customer">Edit Customer Data</string>
    <string name="Main_Bill">Main Bill</string>
    <string name="Add_Items_for_Bill">Add Items for Bill</string>
    <string name="Add_New_Bil">Add New Bill</string>
    <string name="Year">Year</string>
    <string name="bill_no">Bill No</string>
    <string name="press_to_add_customer">press to add customer</string>
    <string name="bill_type">Bill type</string>
    <string name="cash">Cash</string>
    <string name="credit">Credit</string>
    <string name="date">date</string>
    <string name="desc">description</string>
    <string name="disc">Discount</string>
    <string name="total">Total</string>
    <string name="qty">qty</string>
    <string name="Edit_qty">Edit Items qty</string>
    <string name="There_are_no_items">There are no items in the invoice</string>
    <string name="Show_Bill_Info">Bill Info</string>
    <string name="Items_For_Bill">Items Of Bill</string>
    <string name="The_discount_is_large">The discount is larger than the total</string>
    <string name="You_will_not_be_able_to_retrieve">You will not be able to retrieve the invoice and items after deletion</string>
    <string name="Edit_Bill">Edit Bill</string>
    <string name="NetTotal">Net Total</string>
    <string name="Print">Print</string>
    <string name="Share">Share</string>
    <string name="More">More...</string>
    <string name="Change_Language">Change Language</string>
    <string name="Search">Search</string>
    <string name="InsertBillNO">Enter Bill Number...</string>
    <string name="Customer_Bill">Bills OF"</string>
    <string name="There_Is_No_Bills">There Are No Bills</string>
    <string name="Cant_delete_Cust">Customer is associated with a bill</string>
    <string name="Cant_delete_Item">Item is associated with a bill</string>
    <string name="QtyIsZero">Qty Is Zero</string>
    <string name="Support">Support</string>
    <string name="Download">Download</string>
    <string name="GoToMarket">Please download the appropriate application for your device so that we can contact you</string>
    <string name="Info">About</string>
    <string name="pressBack">Press Back again to exit</string>
    <string name="exit">Exit without saving</string>
    <string name="exitTitle">Do you want to exit without saving</string>
    <string name="Contact">Contact Us</string>
    <string name="Version">Version:</string>
    <string name="VersionApp">Version Of The App:</string>
    <string name="VersionDB">Version Of The DataBase:</string>



</resources>
