<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/border_header"
        android:text="@string/item_code"
        android:textAlignment="center" />

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/item_name"
        android:background="@drawable/border_header"
        />

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/border_header"
        android:text="@string/cost"
        android:textAlignment="center" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/border_header"
        android:text="@string/price"
        android:textAlignment="center" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/border_header"
        android:text="@string/ad_date"
        android:textAlignment="center" />

</LinearLayout>



