<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete_forever_black_24dp"
        android:orderInCategory="100"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/update"
        android:icon="@drawable/ic_edit_black_24dp"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:title="@string/edit"
        />
    <item
        android:id="@+id/Print"
        android:icon="@drawable/ic_local_printshop_black_24dp"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:title="@string/Print"
        />
</menu>
