<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/header_width_code_Cost_price"
                    android:layout_height="@dimen/header_height"
                    android:layout_weight="1"
                    android:background="@drawable/border_header"
                    android:text="@string/item_code"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="@dimen/header_width_name"
                    android:layout_height="@dimen/header_height"
                    android:layout_weight="1"
                    android:background="@drawable/border_header"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/item_name"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="@dimen/header_width_code_Cost_price"
                    android:layout_height="@dimen/header_height"
                    android:layout_weight="1"
                    android:background="@drawable/border_header"
                    android:text="@string/cost"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="@dimen/header_width_code_Cost_price"
                    android:layout_height="@dimen/header_height"
                    android:layout_weight="1"
                    android:background="@drawable/border_header"
                    android:text="@string/price"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="@dimen/header_width_date"
                    android:layout_height="@dimen/header_height"
                    android:layout_weight="1"
                    android:background="@drawable/border_header"
                    android:text="@string/ad_date"
                    android:textAlignment="center"
                    android:textStyle="bold" />

            </LinearLayout>

            <ListView
                android:id="@+id/listView_item"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignLeft="@+id/searchView2"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/searchView2" />
        </LinearLayout>
    </HorizontalScrollView>


</RelativeLayout>