<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="horizontal">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/width_customer_code"
                    android:layout_height="@dimen/header_height"
                    android:layout_weight="1"
                    android:background="@drawable/border_header"
                    android:text="@string/customer_code"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="@dimen/width_customer_name"
                    android:layout_height="@dimen/header_height"
                    android:layout_weight="1"
                    android:background="@drawable/border_header"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/name"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="@dimen/width_phone"
                    android:layout_height="@dimen/header_height"
                    android:layout_weight="1"
                    android:background="@drawable/border_header"
                    android:text="@string/phone"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="@dimen/width_address_name"
                    android:layout_height="@dimen/header_height"
                    android:layout_weight="1"
                    android:background="@drawable/border_header"
                    android:text="@string/address"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="@dimen/header_width_date"
                    android:layout_height="@dimen/header_height"
                    android:layout_weight="1"
                    android:background="@drawable/border_header"
                    android:text="@string/ad_date"
                    android:textAlignment="center"
                    android:textStyle="bold" />
            </LinearLayout>

            <ListView
                android:id="@+id/listView_item"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </HorizontalScrollView>
</RelativeLayout>