<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    tools:context="com.example.e3.mybills.AboutActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="13dp"
        app:cardBackgroundColor="@color/cardview_shadow_start_color">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:autoLink="email"
            android:text="devpointzero@gmail.com" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            app:srcCompat="@drawable/ic_email_black_24dp" />
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="12dp"
        android:text="@string/Contact"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/cardView"
        android:layout_marginTop="9dp"
        android:fontFamily="sans-serif"
        android:text="@string/Version"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView7"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/VersionApp"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/VerApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView8"
        android:layout_alignBottom="@+id/textView8"
        android:layout_toEndOf="@+id/textView8"
        android:layout_toLeftOf="@+id/textView8"
        android:fontFamily="sans-serif"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView8"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/VersionDB"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/VerDb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView9"
        android:layout_toEndOf="@+id/textView9"
        android:layout_toLeftOf="@+id/textView9"
        android:fontFamily="sans-serif"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="Created By ET" />

</RelativeLayout>
