<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.example.e3.mybills.ItemsAddEditActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/CardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardElevation="10dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/itm_code_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/toolbar"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/itm_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="27dp"
                        android:ems="10"
                        android:hint="@string/item_code"
                        android:inputType="number" />
                </android.support.design.widget.TextInputLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/CardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_gravity="center"
                app:cardElevation="10dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/itm_name_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/itm_code_input_layout"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/itm_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/itm_code_input_layout"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="27dp"
                        android:ems="10"
                        android:hint="@string/item_name"
                        android:inputType="textPersonName" />
                </android.support.design.widget.TextInputLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/CardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_gravity="center"
                app:cardElevation="10dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/itm_cost_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/itm_name_input_layout"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/itm_cost"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/itm_name_input_layout"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="27dp"
                        android:ems="10"
                        android:hint="@string/cost"
                        android:inputType="number|numberSigned|numberDecimal" />
                </android.support.design.widget.TextInputLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/CardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_gravity="center"
                android:clickable="false"
                android:clipChildren="false"
                android:clipToPadding="false"
                app:cardElevation="10dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/itm_price_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/itm_cost_input_layout"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/itm_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/itm_cost_input_layout"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="27dp"
                        android:ems="10"
                        android:hint="@string/price"
                        android:inputType="number|numberSigned|numberDecimal" />
                </android.support.design.widget.TextInputLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/CardViewStyle"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardBackgroundColor="@color/cardview_light_background"
                app:cardElevation="10dp">

                <Button
                    android:id="@+id/Save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/itm_price_input_layout"
                    android:background="@drawable/border"
                    android:text="@string/save" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/CardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_gravity="center"
                app:cardElevation="10dp">

                <Button
                    android:id="@+id/cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignTop="@+id/Save"
                    android:background="@drawable/border"
                    android:text="@string/cancel" />
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>